# neko-maid

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: animated.neko_ui  board.neko_ui  example.neko_ui  interactions.neko_ui  marker.neko_ui  slots.neko_ui  stress.neko_ui  test.neko_ui
docs/: Syntax.md
example/: menu.rs
examples/: animated.rs  animated_base.rs  board.rs  interactions.rs  marker.rs  menu.rs  slots.rs  stress.rs  test.rs
neko_derive/: Cargo.toml
neko_derive/src/: lib.rs
src/: asset.rs  components.rs  lib.rs  marker.rs  native.rs  systems.rs
src/parse/: class.rs  context.rs  element.rs  import.rs  layout.rs  mod.rs  module.rs  property.rs  scope.rs  style.rs  tests.rs  token.rs  tokenizer.rs  widget.rs
src/parse/ast/: grammar.pest  mod.rs  nodes.rs  tests.rs
src/render/: mod.rs  spawn.rs  systems.rs  update.rs
