[package]
name = "neko-maid"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_text",
  "bevy_asset",
  "bevy_log",
] }
lazy_static = "1.5"
regex = "1.12"
thiserror = "2"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }
pretty_assertions = "1.4"

[features]
default = ["hot-reload"]
hot-reload = ["bevy/file_watcher"]
