[package]
name = "neko-maid"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["neko_derive"]

[dependencies]
neko_derive = { path = "./neko_derive" }
bevy = { version = "0.17", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_text",
  "bevy_asset",
  "bevy_log",
] }
lazy_static = "1.5"
regex = "1.12"
thiserror = "2"
pest = "2.8"
pest_derive = "2.8"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }
pretty_assertions = "1.4"
rand = "0.9.2"

[features]
default = ["hot-reload"]
hot-reload = ["bevy/file_watcher"]
